# fortuner

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README  README.md  autogen.sh  config.h.in  configure.ac  fortuner.desktop  main.cpp  resources.qrc  trayicon.cpp  trayicon.h
cmake/modules/: FindGLIB2.cmake  FindLibnotify.cmake
doc/: Makefile.am  fortuner.1  fortuner.6
icons/: Makefile.am
misc/: Makefile.am  fortuner.desktop  fortuner.desktop.in
po/: POTFILES.in
src/: CMakeLists.txt  Makefile.am  aboutdialog.cpp  aboutdialog.h  config.h.in  fortuner.cpp  fortuner.h  gettext.h  gtk_ui.cpp  gtk_ui.h  main.cpp  main.h  settings.cpp  settings.h  status_icon.cpp  statusicon.cpp  statusicon.h
