icondir = $(datarootdir)/icons/

# I'd like to use nobase_dist_icon_DATA, but
# automake doesn't recognizes two prefixes at once
nobase_dist_icon_DATA = \
    hicolor/16x16/apps/fortuner.png \
    hicolor/32x32/apps/fortuner.png \
    hicolor/96x96/apps/fortuner.png \
    hicolor/24x24/apps/fortuner.png \
    hicolor/48x48/apps/fortuner.png \
    hicolor/scalable/apps/fortuner.svg

EXTRA_DIST = $(nobase_dist_icon_DATA)
